<resources>
    <string name="app_name">coara-browser</string>
    <string name="qrcode_short_label">QRコード</string>
    <string name="qrcode_long_label">QRコードに変換</string>
    <string name="pagedl_short_label">ページDL</string>
    <string name="pagedl_long_label">ページをダウンロード</string>
    <string name="num_short_label">電卓</string>
    <string name="num_long_label">電卓</string>
    <string name="asciiart_short_label">ASCIIアート</string>
    <string name="asciiart_long_label">画像をASCIIアートに変換</string>
    <string name="txtphoto_short_label">TXT画像</string>
    <string name="txtphoto_long_label">TXTを画像に変換</string>
    <string name="cannot_get_image_path">画像のパスを取得できません</string>
    <string name="cannot_load_image">画像を読み込めません</string>
    <string name="convert_ascii_art">アスキーアートに変換</string>
    <string name="file_not_selected">ファイルが選択されていません</string>
    <string name="unknown_file">不明なファイル</string>
    <string name="file_save_failed">ファイルの保存に失敗しました</string>
    <string name="file_save_success">ファイルが保存されました</string>
    <string name="file_saved_path">保存先：</string>
    <string name="need_storage_permission">ストレージへのアクセス権限が必要です</string>
    <string name="save_text">ファイルに保存</string>
    <string name="select_image">画像を選択</string>
    <string name="selected_image">画像を選択しました</string>
    <string name="storage_permission_denied">ストレージのアクセス権限が拒否されました</string>
    <string name="save_color">カラー保存</string>
</resources>
