<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  
    <shortcut
        android:shortcutId="qrcode_convert"
        android:enabled="true"
        android:icon="@drawable/ic_qrcode"
        android:shortcutShortLabel="@string/qrcode_short_label"
        android:shortcutLongLabel="@string/qrcode_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.coara.browser"
            android:targetClass="com.coara.browser.QrCodeActivity" />
    </shortcut>
  
    <shortcut
        android:shortcutId="pagedl"
        android:enabled="true"
        android:icon="@drawable/ic_pagedl"
        android:shortcutShortLabel="@string/pagedl_short_label"
        android:shortcutLongLabel="@string/pagedl_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.coara.browser"
            android:targetClass="com.coara.browser.pagedl" />
    </shortcut>

    <shortcut
        android:shortcutId="asciiart"
        android:enabled="true"
        android:icon="@drawable/ic_asciiart"
        android:shortcutShortLabel="@string/asciiart_short_label"
        android:shortcutLongLabel="@string/asciiart_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.coara.browser"
            android:targetClass="com.coara.browser.asciiart" />
    </shortcut>

    <shortcut
        android:shortcutId="txtphoto"
        android:enabled="true"
        android:icon="@drawable/ic_txtphoto"
        android:shortcutShortLabel="@string/txtphoto_short_label"
        android:shortcutLongLabel="@string/txtphoto_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.coara.browser"
            android:targetClass="com.coara.browser.txtphoto" />
    </shortcut>

</shortcuts>
