<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <TextView
            android:id="@+id/selectedFilePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/file_not_selected" />

    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/convert_ascii_art" />

    <Switch
        android:id="@+id/saveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:checked="true"
        android:text="@string/save_text" />

    
    <Switch
        android:id="@+id/saveColorSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save_color" />

    <TextView
        android:id="@+id/savedFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:text="" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <TextView
                android:id="@+id/asciiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFEFEF"
                android:fontFamily="monospace"
                android:padding="8dp"
                android:scrollbars="horizontal"
                android:textColor="#000000"
                android:textSize="8sp"
                android:singleLine="false" />
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>
